# simpledsp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  conanfile.txt  fft.h  fourier.h  main.cpp  nr3.h  octavefft.m  testFFT.cpp
.github/workflows/: cmake-single-platform.yml
catch2/: catch_amalgamated.cpp  catch_amalgamated.hpp
include/sdsp/: FilterType.h  casc2orderIIR.h  casc_2o_iir.h  fft.h  filter_type.h
test/: testFFT.cpp  testIIR.cpp
test_data/: WriteImpulse.m  findIIRCutoffFreq.m
test_data/impulse_response/: BPimpulse.csv  BPimpulse2.csv  BPimpulse3.csv  HPimpulse.csv  HPimpulse2.csv  HPimpulse3.csv  LPimpulse.csv  LPimpulse2.csv  LPimpulse3.csv
